@@ -1,6 +1,7 @@
 1.2.5i1:
     Core & Setup:
     * 0386 Added all active checks to check_mk -L output...
+    * 0452 Speedup generation of configuration...
     * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
     * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
     * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
